--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 
       // Step 4: End the game
       alert(`Have an amazing day and remember someone back in Weehawken is thinking of you!`);
+      // Ensure the script stops
+      document.body.innerHTML = "<h1 style='color:white;text-align:center;'>Thanks for playing! Refresh to play again.</h1>";
     </script>
   </div>
 </body>
